- Correction du editorconfig - Ajout du backend: Architecture globale + User, Message et FAQ

--- a/.editorconfig
+++ b/.editorconfig
@@ -2,11 +2,12 @@ root = true
 
 # All Files
 [*]
-charset = utf-8
-indent_style = space
-indent_size = 4
-insert_final_newline = true
 trim_trailing_whitespace = true
+insert_final_newline     = true
+indent_style             = space
+end_of_line              = lf
+charset                  = utf-8
+indent_size              = 4
 
 # Markdown Files
 [*.md]
@@ -14,4 +15,7 @@ trim_trailing_whitespace = false
 
 # Web Files
 [*.{htm,html,js,ts,tsx,css,sass,scss,less,svg,vue}]
-indent_size = 2
+indent_size              = 2
+
+[*.{inc,php,phpt,xml}]
+indent_size              = 4
