--- a/.htaccess
+++ b/.htaccess
@@ -1,4 +1,5 @@
 RewriteEngine On
 
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteRule ^(.*)$ index.php [L,QSA]
+RewriteEngine on
+RewriteCond %{REQUEST_FILENAME} !index.php
+RewriteRule ^(.*)$ public/$1 [L]
