--- a/.travis.yml
+++ b/.travis.yml
@@ -4,4 +4,12 @@ php:
   - 7.2
   - 7.3
 
-script: php tools/phpunit.phar tests
+script: php tools/phpunit.phar tests --coverage-clover=coverage.xml
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
+
+branches:
+  only:
+  - master
+  - develop
