--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -9,7 +9,11 @@
     convertNoticesToExceptions="true"
     convertWarningsToExceptions="true"
     processIsolation="false"
+    verbose="true"
+    stopOnError="false"
     stopOnFailure="false"
+    stopOnIncomplete="false"
+    stopOnSkipped="false"
     bootstrap="app/autoload.php">
 
     <testsuites>
@@ -25,6 +29,11 @@
     <filter>
         <whitelist>
             <directory suffix=".php">./app</directory>
+            <exclude>
+                <directory suffix=".php">./app/cache</directory>
+                <directory suffix=".php">./app/phpmailer</directory>
+                <file>./app/autoload.php</file>
+            </exclude>
             <directory suffix=".php">./src/models</directory>
         </whitelist>
     </filter>
